[package]
build = "build.rs"
name  = "ajuna-cli"

authors.workspace    = true
edition.workspace    = true
homepage.workspace   = true
repository.workspace = true
version.workspace    = true

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[dependencies]
# General
clap        = { workspace = true, features = [ "derive" ] }
futures     = { workspace = true, features = [ "thread-pool" ] }
log         = { workspace = true, optional = true }
parking_lot = { workspace = true }

# Parity codec
parity-scale-codec = { workspace = true }

# Substrate
frame-benchmarking-cli       = { workspace = true }
frame-system                 = { workspace = true }
frame-system-rpc-runtime-api = { workspace = true }
pallet-asset-tx-payment      = { workspace = true }
sc-cli                       = { workspace = true }
sc-client-api                = { workspace = true }
sc-consensus-grandpa         = { workspace = true }
sc-service                   = { workspace = true }
sp-api                       = { workspace = true }
sp-core                      = { workspace = true }
sp-inherents                 = { workspace = true }
sp-keyring                   = { workspace = true }
sp-runtime                   = { workspace = true }
sp-timestamp                 = { workspace = true }

sc-executor  = { workspace = true, optional = true }
sc-sysinfo   = { workspace = true, optional = true }
sc-telemetry = { workspace = true, optional = true }
sc-tracing   = { workspace = true, optional = true }
sp-io        = { workspace = true, optional = true }

try-runtime-cli = { workspace = true, optional = true }

# Polkadot
polkadot-cli                   = { workspace = true, optional = true }
polkadot-parachain-primitives  = { workspace = true, optional = true }
polkadot-primitives            = { workspace = true, optional = true }

# Cumulus
cumulus-client-cli      = { workspace = true, optional = true }
cumulus-client-service  = { workspace = true, optional = true }
cumulus-primitives-core = { workspace = true, optional = true }

# Ajuna
ajuna-primitives = { workspace = true }
ajuna-service    = { workspace = true, optional = true }

[features]
default = [ "solo" ]

ajuna = [ "ajuna-service/ajuna", "para" ]
bajun = [ "ajuna-service/bajun", "para" ]
para = [
    "log",
    "sc-sysinfo",
    "sc-telemetry",
    "sc-tracing",
    "polkadot-cli",
    "polkadot-parachain-primitives",
    "polkadot-primitives",
    "cumulus-client-cli",
    "cumulus-client-service",
    "cumulus-primitives-core",
]
solo = [ "ajuna-service/solo" ]

kusama-native   = [ "polkadot-cli/kusama-native" ]
polkadot-native = [ "polkadot-cli/polkadot-native" ]
rococo-native   = [ "polkadot-cli/rococo-native" ]

runtime-benchmarks = [
    "ajuna-service/runtime-benchmarks",
    "polkadot-cli?/runtime-benchmarks",
]

cli         = [ "try-runtime-cli" ]
try-runtime = [
    "ajuna-service/try-runtime",
    "polkadot-cli?/try-runtime",
    "sc-executor",
    "sp-io",
    "try-runtime-cli/try-runtime"
]
