[package]
build = "build.rs"
name  = "ajuna-cli"

authors.workspace    = true
edition.workspace    = true
homepage.workspace   = true
repository.workspace = true
version.workspace    = true

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }

[dependencies]
clap        = { version = "4.0.9", features = [ "derive" ] }
codec       = { package = "parity-scale-codec", version = "3.0.0" }
futures     = { version = "0.3.21", features = [ "thread-pool" ] }
log         = { version = "0.4.16", optional = true }
parking_lot = "0.12.1"

# Local
ajuna-primitives = { path = "../../primitives" }
ajuna-service    = { path = "../service", optional = true }

# Substrate
frame-benchmarking-cli       = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
frame-system                 = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
pallet-asset-tx-payment      = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sc-cli                       = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sc-client-api                = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sc-consensus-grandpa         = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sc-service                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sp-api                       = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sp-core                      = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sp-inherents                 = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sp-keyring                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sp-runtime                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sp-timestamp                 = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }

sc-executor  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", optional = true }
sc-sysinfo   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", optional = true }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", optional = true }
sc-tracing   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", optional = true }
sp-io        = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", optional = true }

# Polkadot
polkadot-cli        = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.42", optional = true }
polkadot-parachain  = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.42", optional = true }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.42", optional = true }

# Cumulus
cumulus-client-cli      = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.42", optional = true }
cumulus-client-service  = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.42", optional = true }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.42", optional = true }

[features]
default = [ "solo" ]

ajuna = [ "ajuna-service/ajuna", "para" ]
bajun = [ "ajuna-service/bajun", "para" ]
para = [
    "log",
    "sc-sysinfo",
    "sc-telemetry",
    "sc-tracing",
    "polkadot-cli",
    "polkadot-parachain",
    "polkadot-primitives",
    "cumulus-client-cli",
    "cumulus-client-service",
    "cumulus-primitives-core",
]
solo = [ "ajuna-service/solo" ]

kusama-native   = [ "polkadot-cli/kusama-native" ]
polkadot-native = [ "polkadot-cli/polkadot-native" ]
rococo-native   = [ "polkadot-cli/rococo-native" ]

runtime-benchmarks = [
    "ajuna-service/runtime-benchmarks",
    "polkadot-cli?/runtime-benchmarks",
]

cli         = [ ]
try-runtime = [
    "ajuna-service/try-runtime",
    "polkadot-cli?/try-runtime",
    "sc-executor",
    "sp-io",
]
