[package]
authors    = [ "Ajuna Network <https://github.com/ajuna-network>" ]
edition    = "2021"
homepage   = "https://ajuna.io"
name       = "ajuna-service"
repository = "https://github.com/ajuna-network/Ajuna"
version    = "0.1.2"

[dependencies]
hex-literal  = "0.3.3"
jsonrpsee = { version = "0.15.1", features = ["server"] }
serde        = { version = "1.0.132", features = [ "derive" ] }

# Local
ajuna-primitives   = { path = "../../primitives" }
ajuna-rpc          = { path = "../../rpc" }
ajuna-solo-runtime = { path = "../../runtime/solo", optional = true }
bajun-runtime      = { path = "../../runtime/bajun", optional = true }
ajuna-runtime      = { path = "../../runtime/ajuna", optional = true }

# Substrate
frame-benchmarking  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-chain-spec       = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-client-api       = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-consensus        = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-consensus-aura   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-executor         = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", features = [ "wasmtime" ] }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-keystore         = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-service          = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", features = [ "wasmtime" ] }
sc-telemetry        = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-consensus        = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-consensus-aura   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-core             = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-runtime          = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-timestamp        = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }

pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", optional = true }
sc-network                     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", optional = true }
sc-network-common              = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", optional = true }
sc-rpc                         = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", optional = true }
sc-sysinfo                     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", optional = true }
sc-tracing                     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", optional = true }
sp-api                         = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", optional = true }
sp-block-builder               = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", optional = true }
sp-keystore                    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", optional = true }
sp-offchain                    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", optional = true }
sp-session                     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", optional = true }
sp-transaction-pool            = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", optional = true }
substrate-frame-rpc-system     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", optional = true }
substrate-prometheus-endpoint  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", optional = true }

# Polkadot
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.28", optional = true }
xcm              = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.28", optional = true, default-features = false }

# Cumulus
cumulus-client-cli                      = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.28", optional = true }
cumulus-client-consensus-aura           = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.28", optional = true }
cumulus-client-consensus-common         = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.28", optional = true }
cumulus-client-network                  = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.28", optional = true }
cumulus-client-service                  = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.28", optional = true }
cumulus-primitives-core                 = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.28", optional = true }
cumulus-primitives-parachain-inherent   = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.28", optional = true }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.28", optional = true }
cumulus-relay-chain-interface           = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.28", optional = true }
cumulus-relay-chain-rpc-interface       = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.28", optional = true }

[features]
default = [ "solo" ]

para = [
    "pallet-transaction-payment-rpc",
    "sc-network",
    "sc-network-common",
    "sc-rpc",
    "sc-sysinfo",
    "sc-tracing",
    "sp-api",
    "sp-block-builder",
    "sp-keystore",
    "sp-offchain",
    "sp-session",
    "sp-transaction-pool",
    "substrate-frame-rpc-system",
    "substrate-prometheus-endpoint",
    "polkadot-service",
    "xcm",
    "cumulus-client-cli",
    "cumulus-client-consensus-aura",
    "cumulus-client-consensus-common",
    "cumulus-client-network",
    "cumulus-client-service",
    "cumulus-primitives-core",
    "cumulus-primitives-parachain-inherent",
    "cumulus-relay-chain-inprocess-interface",
    "cumulus-relay-chain-interface",
    "cumulus-relay-chain-rpc-interface",
]
solo = [ "ajuna-solo-runtime" ]
bajun = ["bajun-runtime", "para"]
ajuna = ["ajuna-runtime", "para"]

kusama-native = [ "polkadot-service/kusama-native" ]
rococo-native = [ "polkadot-service/rococo-native" ]
polkadot-native = [ "polkadot-service/polkadot-native" ]

runtime-benchmarks = [
    "ajuna-solo-runtime/runtime-benchmarks",
    "bajun-runtime/runtime-benchmarks",
    "ajuna-runtime/runtime-benchmarks",
]
