[package]
description = "Ajuna Network pallet used to play Awesome Avatars"
name        = "pallet-ajuna-awesome-avatars"

authors.workspace    = true
edition.workspace    = true
homepage.workspace   = true
repository.workspace = true
version.workspace    = true

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[dependencies]
codec      = { default-features = false, features = [ "derive", "max-encoded-len" ], package = "parity-scale-codec", version = "3.0.0" }
log        = { default-features = false, version = "0.4.17" }
scale-info = { default-features = false, features = [ "derive" ], version = "2.1.1" }

pallet-ajuna-nft-transfer = { default-features = false, path = "../ajuna-nft-transfer" }

frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
frame-system  = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-io         = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-runtime    = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-std        = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }

[dev-dependencies]
pallet-balances                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
pallet-nfts                       = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-core                           = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }

[features]
default = [ "std" ]
runtime-benchmarks = [
    "pallet-nfts/runtime-benchmarks",
]
std = [
    "codec/std",
    "scale-info/std",
    "sp-io/std",
    "pallet-ajuna-nft-transfer/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-std/std",
    "log/std",
]
try-runtime = [ "frame-support/try-runtime", "pallet-ajuna-nft-transfer/try-runtime" ]
