[package]
description = "Ajuna Network pallet battle mogs"
name        = "pallet-ajuna-battle-mogs"

authors.workspace    = true
edition.workspace    = true
homepage.workspace   = true
repository.workspace = true
version.workspace    = true

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[dependencies]
# Substrate (wasm)
frame-benchmarking = { workspace = true, optional = true }
frame-support      = { workspace = true }
frame-system       = { workspace = true }
parity-scale-codec = { workspace = true, features = [ "derive", "max-encoded-len" ] }
scale-info         = { workspace = true, features = [ "derive" ] }
sp-io              = { workspace = true }
sp-runtime         = { workspace = true }
sp-std             = { workspace = true }

# Ajuna
ajuna-primitives = { workspace = true }

[dev-dependencies]
pallet-balances                            = { workspace = true }
pallet-insecure-randomness-collective-flip = { workspace = true }
sp-core                                    = { workspace = true }

[features]
default = [ "std" ]
runtime-benchmarks = [ "frame-benchmarking" ]
std = [
    "ajuna-primitives/std",
    "parity-scale-codec/std",
    "sp-runtime/std",
    "scale-info/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "sp-io/std",
]
try-runtime = [ "frame-support/try-runtime" ]
