[package]
authors     = [ "Ajuna Network <https://github.com/ajuna-network>" ]
description = "Ajuna Network pallet connect four"
edition     = "2021"
homepage    = "https://ajuna.io"
license     = "Apache-2.0"
name        = "pallet-ajuna-connectfour"
repository  = "https://github.com/ajuna-network/Ajuna"
version     = "0.1.0"

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[dependencies]
codec      = { default-features = false, features = [ "derive", "max-encoded-len" ], package = "parity-scale-codec", version = "3.0.0" }
scale-info = { default-features = false, features = [ "derive" ], version = "2.1" }

frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20", optional = true }
frame-support      = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
frame-system       = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-runtime         = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-std             = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }

[dev-dependencies]
frame-support-test = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
pallet-scheduler   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-core            = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-io              = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }

[features]
default = [ "std" ]
runtime-benchmarks = [ "frame-benchmarking" ]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking/std",
    "sp-runtime/std",
    "sp-std/std",
]
try-runtime = [ "frame-support/try-runtime" ]
