[package]
authors     = [ "Ajuna Network <https://github.com/ajuna-network>" ]
description = "Ajuna Network pallet gameregistry for registring games between players."
edition     = "2021"
homepage    = "https://ajuna.io"
license     = "Apache-2.0"
name        = "pallet-ajuna-gameregistry"
repository  = "https://github.com/ajuna-network/Ajuna"
version     = "0.1.0"

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[dependencies]
log = { default-features = false, version = "0.4.16" }
codec = { default-features = false, features = ["derive"], package = "parity-scale-codec", version = "3.0.0" }
scale-info = { default-features = false, features = ["derive"], version = "2.1.1" }

frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32", optional = true }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32", optional = true }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }

ajuna-common = { default-features = false, path = "../../ajuna-common" }
pallet-ajuna-matchmaker = { default-features = false, path = "../ajuna-matchmaker" }

[dev-dependencies]
pallet-membership = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
pallet-scheduler = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }

[features]
default = [ "std" ]
runtime-benchmarks = [ "frame-benchmarking", "sp-core" ]
std = [
    "ajuna-common/std",
    "codec/std",
    "scale-info/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
]
try-runtime = [ "frame-support/try-runtime" ]
